# part2

./: CMakeLists.txt  Makefile  build.ninja  main.cpp  rules.ninja
